# Ecubee

./: .gitignore  CMakeLists.txt  MPU9150.cpp  MPU9150.h  Makefile  fusion.cpp  fusiontest.cpp  i2cManager.cpp  imucal.c  local_defaults.h  main.cpp
Ecubee.xcodeproj/: project.pbxproj
Ecubee.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Ecubee.xcodeproj/project.xcworkspace/xcuserdata/Marcel.xcuserdatad/: UserInterfaceState.xcuserstate
Ecubee.xcodeproj/xcuserdata/Marcel.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
comm/: communicator.cpp  communicator.h  rs232.cpp  rs232.h
eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
i2c/: MPU9150.cpp  MPU9150.h  MPU9150Wrapper.cpp  MPU9150Wrapper.h  i2cBus.cpp  i2cBus.h  i2cSlave.cpp  linux_glue.h  mpu9150.c  mpu9150.h  quaternion.h  vector3d.h
i2c obsolete/: MPU9150.cpp  MPU9150.h  MPU9150Wrapper.cpp  MPU9150Wrapper.h  README.md  i2cManager.h  i2cSlave.h
osg/: CreateWindows.cpp  CustomCamera.cpp  CustomCamera.h
